[tool.poetry]
name = "inclusive-dance-bot"
version = "0.1.0"
description = "Chat bot for charity organization \"Inclusive Dance\""
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
aiogram-dialog = "2.1.0b2"
SQLAlchemy = "^2.0.21"
SQLAlchemy-Utils = "^0.41.1"
alembic = "^1.12.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
redis = "^5.0.1"
pytz = "^2023.3.post1"
greenlet = "^3.0.0"
aiomisc = {extras = ["uvloop"], version = "^17.3.23"}
aiomisc-dependency = "^0.1.20"
aiomisc-pytest = "^1.1.1"
configargparse = "^1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pre-commit = "^3.4.0"
black = "^23.9.1"
flake8 = "^6.1.0"
bandit = "^1.7.5"
types-pytz = "^2023.3.1.1"
polyfactory = "^2.10.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-subtests = "^0.11.0"

[tool.poetry.scripts]
bot = "inclusive_dance_bot.__main__:main"
init_data = "inclusive_dance_bot.init_data:main"
migrate = "inclusive_dance_bot.db.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.black]
target-version = ["py311"]

[tool.isort]
known_local_folder = ["inclusive_dance_bot", "tests"]
py_version = "311"
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiomisc_dependency.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_api_service_helper.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "configargparse.*"
ignore_missing_imports = true